DB Script Change and Enhancements
1. Corrected DB script AUTO_INCREMENT ID to use BIGINT
2. Enhanced Spring liquibase and r2dbc bootstrap
3. Refactoring

--- a/e-wallet-api/src/main/resources/application.properties
+++ b/e-wallet-api/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-application.r2dbc.host=mem
-application.datasource.driverClassName=org.h2.Driver
-application.datasource.username=sa
-application.datasource.password=password
-#spring.r2dbc.url=r2dbc:h2:mem:///e-wallet
-#spring.r2dbc.username=sa
-#spring.r2dbc.password=password
-spring.r2dbc.initialization-mode=always
-spring.liquibase.enabled=true
+#liquibase properties
+spring.liquibase.enabled=false
+application.spring.liquibase.driverClassName=org.h2.Driver
+application.spring.liquibase.url=jdbc:h2:mem:e-wallet
+application.spring.liquibase.username=sa
+application.spring.liquibase.password=password
+application.spring.liquibase.changeLogPath=classpath:/db/changelog/db.changelog-master.xml
+
+#r2dbc properties
+application.spring.r2dbc.host=localhost
+application.spring.r2dbc.port=3306
+application.spring.r2dbc.database=e-wallet
+application.spring.r2dbc.driver=pool
+application.spring.r2dbc.protocol=h2:mem
+application.spring.r2dbc.user=sa
+application.spring.r2dbc.password=password
+application.spring.r2dbc.initialSize=10
+application.spring.r2dbc.maxSize=30
+
