Added spring verticle factory to allow verticle lifecycle to be controlled by spring

--- a/hazelcast-eureka-service-discovery/hazelcast-server-cluster/src/main/resources/application.properties
+++ b/hazelcast-eureka-service-discovery/hazelcast-server-cluster/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-
+logging.level.root=debug
 eureka.instance.appname=hazelcast-server-cluster
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
