--- a/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
+++ b/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
-quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
+quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
+#quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
 quarkus.datasource.username=root
 quarkus.datasource.password=
-quarkus.datasource.db-kind=mariadb
+quarkus.datasource.db-kind=h2
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.bind-parameters=true
@@ -15,3 +15,5 @@ org.hibernate.envers.revision_field_name=rev
 org.hibernate.envers.revision_type_field_name=rev_type
 
 quarkus.log.level=DEBUG
+
+quarkus.package.type=uber-jar
