--- a/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
+++ b/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
@@ -3,6 +3,7 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
 quarkus.datasource.username=root
 quarkus.datasource.password=
 quarkus.datasource.db-kind=h2
+#quarkus.datasource.db-kind=mariadb
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.bind-parameters=true
