enabled quarkus metrics and enabled multi verticle deployment options

--- a/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
+++ b/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
@@ -5,6 +5,9 @@ quarkus.datasource.password=
 quarkus.datasource.db-kind=h2
 #quarkus.datasource.db-kind=mariadb
 
+quarkus.hibernate-orm.statistics=true
+quarkus.hibernate-orm.log-session-metrics=true
+quarkus.hibernate-orm.metrics.enabled=true
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.bind-parameters=true
 quarkus.hibernate-orm.log.sql=true
