--- a/quarkus/quarkus-vertx-graphql-demo/src/main/resources/application.properties
+++ b/quarkus/quarkus-vertx-graphql-demo/src/main/resources/application.properties
@@ -13,10 +13,13 @@ quarkus.hibernate-orm.log.bind-parameters=true
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.format-sql=false
 quarkus.hibernate-orm.log.jdbc-warnings=true
+quarkus.hibernate-orm.second-level-caching-enabled=false
 
-org.hibernate.envers.audit_table_suffix=_aud
-org.hibernate.envers.revision_field_name=rev
-org.hibernate.envers.revision_type_field_name=rev_type
+quarkus.hibernate-envers.store-data-at-delete=true
+quarkus.hibernate-envers.audit-table-suffix=_aud
+quarkus.hibernate-envers.revision-field-name=revision_number
+quarkus.hibernate-envers.revision-type-field-name=revision_type
+quarkus.hibernate-envers.modified-flag-suffix=_mod
 
 quarkus.log.level=DEBUG
 
