--- a/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
+++ b/quarkus/quarkus-vertx-openapi-demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
-quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
+quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus
+#quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
 quarkus.datasource.username=root
 quarkus.datasource.password=
-#quarkus.datasource.db-kind=h2
-quarkus.datasource.db-kind=mariadb
+quarkus.datasource.db-kind=h2
+#quarkus.datasource.db-kind=mariadb
 
 quarkus.hibernate-orm.statistics=true
 quarkus.hibernate-orm.log-session-metrics=true
